<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".retailer_shoplist">

    <TextView
        android:id="@+id/text_producers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_round"
        android:text="@string/producers"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_myaccount"
        app:layout_constraintStart_toStartOf="@+id/button_myaccount"
        app:layout_constraintTop_toBottomOf="@+id/button_myaccount" />

    <TextView
        android:id="@+id/text_sortby"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_round"
        android:text="@string/sort_by"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/button_price"
        android:layout_width="wrap_content"
        android:layout_height="25pt"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_theme"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/text_sortby"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/button_rating"
        android:layout_width="wrap_content"
        android:layout_height="25pt"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_theme"
        android:text="@string/rating"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toEndOf="@+id/button_price"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/button_myaccount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_theme"
        android:text="@string/my_account"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_theme"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/list_producer"
        app:layout_constraintStart_toStartOf="@+id/list_producer"
        app:layout_constraintTop_toBottomOf="@+id/list_producer" />

    <ListView
        android:id="@+id/list_producer"
        android:layout_width="322dp"
        android:layout_height="350dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/listview_theme"
        app:layout_constraintEnd_toEndOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_theme"
        app:layout_constraintEnd_toEndOf="@+id/text_producers"
        app:layout_constraintStart_toStartOf="@+id/text_producers"
        app:layout_constraintTop_toBottomOf="@+id/text_producers" />


</androidx.constraintlayout.widget.ConstraintLayout>