<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_background"
    tools:context=".retailer_myaccount">


    <TextView
        android:id="@+id/text_accountinformation"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round"
        android:text="@string/account_information"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/text_accountname"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_round"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editprofile" />

    <TextView
        android:id="@+id/text_accountaddress"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_round"
        android:text="@string/address"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_accountname"
        app:layout_constraintStart_toStartOf="@+id/text_accountname"
        app:layout_constraintTop_toBottomOf="@+id/text_accountname" />

    <TextView
        android:id="@+id/text_accountcontact"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/shape_round"
        android:text="@string/contact_number"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_accountaddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_accountaddress"
        app:layout_constraintTop_toBottomOf="@+id/text_accountaddress" />

    <TextView
        android:id="@+id/text_accountemail"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_round"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_accountcontact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_accountcontact"
        app:layout_constraintTop_toBottomOf="@+id/text_accountcontact" />

    <TextView
        android:id="@+id/text_productsordered"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:background="@drawable/shape_round"
        android:text="@string/products_ordered"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editprofile"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/textview_accountname"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_theme"
        android:text="Product Name"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/text_accountname"
        app:layout_constraintTop_toBottomOf="@+id/button_editprofile" />

    <TextView
        android:id="@+id/textview_accountcontact"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_theme"
        android:text="Contact Number"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_accountaddress"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textview_accountaddress"
        app:layout_constraintTop_toBottomOf="@+id/textview_accountaddress" />

    <TextView
        android:id="@+id/textview_accountemail"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_theme"
        android:text="Email"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_accountcontact"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textview_accountcontact"
        app:layout_constraintTop_toBottomOf="@+id/textview_accountcontact" />

    <TextView
        android:id="@+id/textview_accountaddress"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_theme"
        android:text="Address is so fcking long so we need to design this"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_accountname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textview_accountname"
        app:layout_constraintTop_toBottomOf="@+id/textview_accountname" />

    <Button
        android:id="@+id/button_currentorder"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_theme"
        android:text="@string/current"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_productsordered" />

    <Button
        android:id="@+id/button_editprofile"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_theme"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/image_accountimage"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/image_accountimage"
        app:layout_constraintTop_toBottomOf="@+id/image_accountimage" />

    <Button
        android:id="@+id/button_delivered"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_theme"
        android:text="@string/delivered"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/button_currentorder"
        app:layout_constraintTop_toBottomOf="@+id/text_productsordered" />

    <Button
        android:id="@+id/button_becomecourier"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_theme"
        android:text="Become a Courier"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_currentorder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_currentorder"
        app:layout_constraintTop_toBottomOf="@+id/button_currentorder" />

    <Button
        android:id="@+id/button_becomeseller"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_theme"
        android:text="Become a Seller"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_delivered"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_delivered"
        app:layout_constraintTop_toBottomOf="@+id/button_delivered" />

    <ImageView
        android:id="@+id/image_accountimage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_accountinformation"
        app:srcCompat="@drawable/user" />


</androidx.constraintlayout.widget.ConstraintLayout>